# Wave_equation

./: .gitignore  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: xf4nc7zfv09jsg94vmlqwlc5k4r7r256-source
cpp/: CMakeLists.txt  main.cpp  wave_solver.hpp
cpp/.cache/clangd/index/: main.cpp.DCE49F0F614C4ABF.idx  wave_solver.hpp.A89407907AD71378.idx
py/: demo.py  wave_solver.py
